--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/idiriCoaching.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Coaching sportif et bien-être à Marne-la-Vallée, Paris et toute l'Île-de-France. Perte de poids, remise en forme, prise de masse et stages de yoga avec nos coachs professionnels Nadia et Sabrina." />
+    <meta name="keywords" content="coaching sportif, coach personnel, perte de poids, remise en forme, prise de masse, stage yoga, bien-être, Marne-la-Vallée, Paris, Val-d'Oise, Île-de-France" />
+    <meta name="author" content="IdiriCoaching" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="IdiriCoaching - Coaching sportif et bien-être à Marne-la-Vallée et Paris" />
+    <meta property="og:description" content="Coaching personnalisé en Île-de-France : remise en forme, perte de poids, yoga et bien-être à Paris, Marne-la-Vallée, et le Val-d'Oise." />
+    <meta property="og:image" content="%PUBLIC_URL%/idiriCoaching.png" />
+    <meta property="og:url" content="https://idiricoaching.fr" />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://idiricoaching.fr" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "IdiriCoaching",
+      "description": "Coaching sportif personnalisé en Île-de-France? Coach sportif: remise en forme, perte de poids, yoga et bien-être à Paris, Marne-la-Vallée, et Val-d'Oise.",
+      "url": "https://idiricoaching.fr",
+      "image": "https://idiricoaching.fr/idiriCoaching.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Marne-la-Vallée",
+        "addressRegion": "Île-de-France",
+        "addressCountry": "FR"
+      },
+      "telephone": "+33 1 23 45 67 89",
+      "openingHours": "Mo-Su 08:00-20:00"
+    }
+    </script>
+
+    <!-- Page Title -->
+    <title>IdiriCoaching - Coaching sportif en Ile-de-France, Marne-la-Vallée, Paris et Val-d'Oise</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
