--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,20 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="IdiriCoaching - Coaching sportif et bien-être à Marne-la-Vallée et Paris" />
+    <meta property="og:title" content="IdiriCoaching - Coach sportif et bien-être à Marne-la-Vallée,Seine et Marne, Paris, Val-d'oise" />
     <meta property="og:description" content="Coaching personnalisé en Île-de-France : remise en forme, perte de poids, yoga et bien-être à Paris, Marne-la-Vallée, et le Val-d'Oise." />
     <meta property="og:image" content="%PUBLIC_URL%/idiriCoaching.png" />
     <meta property="og:url" content="https://idiricoaching.fr" />
     <meta property="og:type" content="website" />
 
     <!-- Favicon -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="idiriCoaching.png" type="image/x-icon" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://idiricoaching.fr" />
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="idiriCoaching.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Structured Data -->
@@ -35,21 +35,21 @@
       "@type": "LocalBusiness",
       "name": "IdiriCoaching",
       "description": "Coaching sportif personnalisé en Île-de-France? Coach sportif: remise en forme, perte de poids, yoga et bien-être à Paris, Marne-la-Vallée, et Val-d'Oise.",
-      "url": "https://idiricoaching.fr",
+      "url": "https://idiricoaching.fr","https://www.idiricoaching.fr",
       "image": "https://idiricoaching.fr/idiriCoaching.png",
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Marne-la-Vallée",
+        "addressLocality": "Marne-la-Vallée, Saint-Gracien, Paris",
         "addressRegion": "Île-de-France",
         "addressCountry": "FR"
       },
-      "telephone": "+33 1 23 45 67 89",
+      "email": "idiricoaching56@gmail.com",
       "openingHours": "Mo-Su 08:00-20:00"
     }
     </script>
 
     <!-- Page Title -->
-    <title>IdiriCoaching - Coaching sportif en Ile-de-France, Marne-la-Vallée, Paris et Val-d'Oise</title>
+    <title>IdiriCoaching - Coach sportif en Ile-de-France, Marne-la-Vallée, Paris et Val-d'Oise</title>
   </head>
   <body>
     <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
